--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <p>I’m a tech enthusiast, AI learner, and future high-level developer.</p>
   <p>I love working on projects related to AI/ML, web development, and automation.</p>
   <p>Connect with me on:
-    <a href="https://www.linkedin.com/in/sanskar-jain-298789256/" target="_blank">LinkedIn</a> |
+    <a href="https://www.canva.com/design/DAGxWI2g69U/BQXIMNQ4XNHvsWZfk3o2YA/edit?utm_content=DAGxWI2g69U&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank">Synopsis</a> |
     <a href="sanskarjain056@gmail.com">Email</a>
   </p>
 </body>
