--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
   <p>Connect with me on:
     <a href="https://www.canva.com/design/DAGxWI2g69U/BQXIMNQ4XNHvsWZfk3o2YA/edit?utm_content=DAGxWI2g69U&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank">Synopsis</a> |
     <a href="sanskarjain056@gmail.com">Email</a>
+ <a href="https://test.pod.ai/assessment/69bd8744-12e6-4f1b-98a2-4610b629e0b7?userAssessmentId=0b304576-548b-4097-9aa1-47dea144df8b&orgId=3cl8HC">Computer Science Fundamentals</a>
+ <a href="https://test.pod.ai/assessment/8a74b82b-fd75-48b6-9479-b5719a4d2720?userAssessmentId=13686339-6a11-4dca-8eed-b6e22f869c33&orgId=3cl8HC">Computer Programming</a>
+ <a href="https://test.pod.ai/assessment/2da8e831-5a22-4437-bcad-95b194fd7389?userAssessmentId=ce3a6d62-e399-4cd0-bd82-36f9ee1e414a&orgId=3cl8HC">Aptitude</a>
   </p>
 </body>
 </html>
