--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <p>I’m a tech enthusiast, AI learner, and future high-level developer.</p>
   <p>I love working on projects related to AI/ML, web development, and automation.</p>
   <p>Connect with me on:
-    <a href="https://www.canva.com/design/DAGxWI2g69U/BQXIMNQ4XNHvsWZfk3o2YA/edit?utm_content=DAGxWI2g69U&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank">Synopsis</a> |
+    <a href="http://164.52.196.79:4000/api/auth/callback/email?callbackUrl=http%3A%2F%2F164.52.196.79%3A4000&token=c02ff3f22a6ac4a645e98c1ab3aa3b29f3dab16c3ab2fab6f2d4db314ba36912&email=sanskarjain056%40gmail.com">Synopsis</a> |
     <a href="sanskarjain056@gmail.com">Email</a>
  <a href="https://test.pod.ai/assessment/69bd8744-12e6-4f1b-98a2-4610b629e0b7?userAssessmentId=0b304576-548b-4097-9aa1-47dea144df8b&orgId=3cl8HC">Computer Science Fundamentals</a>
  <a href="https://test.pod.ai/assessment/8a74b82b-fd75-48b6-9479-b5719a4d2720?userAssessmentId=13686339-6a11-4dca-8eed-b6e22f869c33&orgId=3cl8HC">Computer Programming</a>
